加了一个可视化代码

--- a/examples/kaggle/titanic/demo_en.ipynb
+++ b/examples/kaggle/titanic/demo_en.ipynb
@@ -14,18 +14,18 @@
     "tags": []
    },
    "source": [
-    "# 🚀 自研动态图学习框架 AdaptoFlux：在 Titanic 上实现全自动建模\n",
+    "# 🚀 Self-Developed Dynamic Graph Learning Framework AdaptoFlux: Fully Automated Modeling on Titanic\n",
     "\n",
-    "欢迎使用 **AdaptoFlux** —— 一种基于函数图自动生长的可解释机器学习框架。\n",
+    "Welcome to **AdaptoFlux** — an interpretable machine learning framework based on automatic function graph growth.\n",
     "\n",
-    "本 Notebook 演示如何：\n",
-    "- 加载预处理数据\n",
-    "- 训练动态函数图模型\n",
-    "- 保存图结构为 JSON\n",
-    "- 可视化图结构（交互式）\n",
-    "- 生成 Kaggle 提交文件\n",
+    "This notebook demonstrates how to:\n",
+    "- Load preprocessed data\n",
+    "- Train a dynamic function graph model\n",
+    "- Save the graph structure as JSON\n",
+    "- Visualize the graph (interactive)\n",
+    "- Generate a Kaggle submission file\n",
     "\n",
-    "👉 所有代码开源，欢迎 Star & Fork！"
+    "👉 All code is open-source. Feel free to Star & Fork!"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "! git init\n",
-    "! git clone https://github.com/gugugu12138/AdaptoFlux"
+    "! git clone https://github.com/gugugu12138/AdaptoFlux  "
    ]
   },
   {
@@ -141,7 +141,7 @@
     "    format='[%(levelname)s] %(name)s: %(message)s'\n",
     ")\n",
     "\n",
-    "logging.info(\"✅ Logging 测试：配置成功！\")"
+    "logging.info(\"✅ Logging Test: Configuration successful!\")"
    ]
   },
   {
@@ -158,11 +158,11 @@
     "tags": []
    },
    "source": [
-    "## 🧩 自定义方法池（methods.py）\n",
+    "## 🧩 Custom Method Pool (methods.py)\n",
     "\n",
-    "确保 `methods.py` 已定义基础函数（如 `add_values`, `multiply_values` 等），并用 `@method_profile` 装饰。示例的方法池在/kaggle/working/AdaptoFlux/examples/kaggle/titanic/methods.py中\n",
+    "Ensure `methods.py` defines basic functions (e.g., `add_values`, `multiply_values`, etc.) decorated with `@method_profile`. An example method pool is located at /kaggle/working/AdaptoFlux/examples/kaggle/titanic/methods.py\n",
     "\n",
-    "内容为："
+    "Content:"
    ]
   },
   {
@@ -187,7 +187,7 @@
    },
    "outputs": [],
    "source": [
-    "# 该代码块无需运行\n",
+    "# This code block does not need to be executed\n",
     "import math\n",
     "from ATF.methods.decorators import method_profile\n",
     "\n",
@@ -196,15 +196,15 @@
     "    output_count=1,\n",
     "    input_types=['scalar'],\n",
     "    output_types=['scalar'],\n",
-    "    group=\"basic\",           # ✅ 统一分组\n",
+    "    group=\"basic\",           # ✅ Unified group\n",
     "    weight=1.0,\n",
     "    vectorized=False\n",
     ")\n",
     "def return_value(x):\n",
     "    \"\"\"\n",
-    "    返回原数值\n",
-    "    :param x: 输入数值\n",
-    "    :return: 原数值\n",
+    "    Returns the input value\n",
+    "    :param x: Input value\n",
+    "    :return: Original value\n",
     "    \"\"\"\n",
     "    return [x]\n",
     "\n",
@@ -212,16 +212,16 @@
     "    output_count=1,\n",
     "    input_types=['scalar', 'scalar'],\n",
     "    output_types=['scalar'],\n",
-    "    group=\"basic\",           # ✅ 统一分组\n",
+    "    group=\"basic\",           # ✅ Unified group\n",
     "    weight=1.0,\n",
     "    vectorized=False\n",
     ")\n",
     "def add_values(x, y):\n",
     "    \"\"\"\n",
-    "    将两个数值相加\n",
-    "    :param x: 第一个数\n",
-    "    :param y: 第二个数\n",
-    "    :return: 两数之和\n",
+    "    Adds two values\n",
+    "    :param x: First number\n",
+    "    :param y: Second number\n",
+    "    :return: Sum of x and y\n",
     "    \"\"\"\n",
     "    return [x + y]\n",
     "\n",
@@ -229,16 +229,16 @@
     "    output_count=1,\n",
     "    input_types=['scalar', 'scalar'],\n",
     "    output_types=['scalar'],\n",
-    "    group=\"basic\",           # ✅ 统一分组\n",
+    "    group=\"basic\",           # ✅ Unified group\n",
     "    weight=1.0,\n",
     "    vectorized=False\n",
     ")\n",
     "def calculate_difference(a, b):\n",
     "    \"\"\"\n",
-    "    计算两个数的差\n",
-    "    :param a: 被减数\n",
-    "    :param b: 减数\n",
-    "    :return: 差值\n",
+    "    Calculates the difference between two numbers\n",
+    "    :param a: Minuend\n",
+    "    :param b: Subtrahend\n",
+    "    :return: Difference\n",
     "    \"\"\"\n",
     "    return [a - b]\n",
     "\n",
@@ -247,16 +247,16 @@
     "    output_count=1,\n",
     "    input_types=['scalar', 'scalar'],\n",
     "    output_types=['scalar'],\n",
-    "    group=\"basic\",           # ✅ 统一分组\n",
+    "    group=\"basic\",           # ✅ Unified group\n",
     "    weight=1.0,\n",
     "    vectorized=False\n",
     ")\n",
     "def multiply_values(x, y):\n",
     "    \"\"\"\n",
-    "    将两个数值相乘\n",
-    "    :param x: 第一个数\n",
-    "    :param y: 第二个数\n",
-    "    :return: 两数之积\n",
+    "    Multiplies two values\n",
+    "    :param x: First number\n",
+    "    :param y: Second number\n",
+    "    :return: Product of x and y\n",
     "    \"\"\"\n",
     "    return [x * y]\n",
     "\n",
@@ -270,10 +270,10 @@
     ")\n",
     "def divide_values(x, y):\n",
     "    \"\"\"\n",
-    "    将两个数值相除（带零检查）\n",
-    "    :param x: 被除数\n",
-    "    :param y: 除数\n",
-    "    :return: x / y 或 0（当y=0时）\n",
+    "    Divides two values (with zero check)\n",
+    "    :param x: Dividend\n",
+    "    :param y: Divisor\n",
+    "    :return: x / y or 0 if y = 0\n",
     "    \"\"\"\n",
     "    return [x / y if y != 0 else 0]\n",
     "\n",
@@ -281,32 +281,32 @@
     "    output_count=2,\n",
     "    input_types=['scalar'],\n",
     "    output_types=['scalar', 'scalar'],\n",
-    "    group=\"basic\",           # ✅ 统一分组\n",
+    "    group=\"basic\",           # ✅ Unified group\n",
     "    weight=1.0,\n",
     "    vectorized=False\n",
     ")\n",
     "def return_two_values(x):\n",
     "    \"\"\"\n",
-    "    返回两个原数值\n",
-    "    :param x: 输入数值\n",
-    "    :return: 原数值\n",
+    "    Returns two copies of the input value\n",
+    "    :param x: Input value\n",
+    "    :return: Original value\n",
     "    \"\"\"\n",
     "    return [x, x]\n",
     "\n",
-    "# 没提升没降低，只会拉低速度和计算量\n",
+    "# No improvement, only slows down speed and increases computation\n",
     "# @method_profile(\n",
     "#     output_count=3,\n",
     "#     input_types=['scalar'],\n",
     "#     output_types=['scalar', 'scalar', 'scalar'],\n",
-    "#     group=\"basic\",           # ✅ 统一分组\n",
+    "#     group=\"basic\",           # ✅ Unified group\n",
     "#     weight=1.0,\n",
     "#     vectorized=False\n",
     "# )\n",
     "# def return_three_values(x):\n",
     "#     \"\"\"\n",
-    "#     返回两个原数值\n",
-    "#     :param x: 输入数值\n",
-    "#     :return: 原数值\n",
+    "#     Returns three copies of the input value\n",
+    "#     :param x: Input value\n",
+    "#     :return: Original value\n",
     "#     \"\"\"\n",
     "#     return [x, x, x]\n",
     "\n",
@@ -314,14 +314,14 @@
     "    output_count=1,\n",
     "    input_types=['scalar'],\n",
     "    output_types=['scalar'],\n",
-    "    group=\"basic\",           # 统一归入 basic 组\n",
+    "    group=\"basic\",           # Unified into basic group\n",
     "    weight=1.0,\n",
     "    vectorized=False\n",
     ")\n",
     "def decrement(x):\n",
     "    \"\"\"\n",
-    "    将输入值减 1\n",
-    "    :param x: 输入数值\n",
+    "    Decreases input by 1\n",
+    "    :param x: Input value\n",
     "    :return: x - 1\n",
     "    \"\"\"\n",
     "    return [x - 1]\n",
@@ -331,14 +331,14 @@
     "    output_count=1,\n",
     "    input_types=['scalar'],\n",
     "    output_types=['scalar'],\n",
-    "    group=\"basic\",           # 统一归入 basic 组\n",
+    "    group=\"basic\",           # Unified into basic group\n",
     "    weight=1.0,\n",
     "    vectorized=False\n",
     ")\n",
     "def increment(x):\n",
     "    \"\"\"\n",
-    "    将输入值加 1\n",
-    "    :param x: 输入数值\n",
+    "    Increases input by 1\n",
+    "    :param x: Input value\n",
     "    :return: x + 1\n",
     "    \"\"\"\n",
     "    return [x + 1]\n",
@@ -348,14 +348,14 @@
     "    output_count=1,\n",
     "    input_types=['scalar'],\n",
     "    output_types=['scalar'],\n",
-    "    group=\"basic\",           # 统一归入 basic 组\n",
+    "    group=\"basic\",           # Unified into basic group\n",
     "    weight=1.0,\n",
     "    vectorized=False\n",
     ")\n",
     "def negate_value(x):\n",
     "    \"\"\"\n",
-    "    将输入值取相反数\n",
-    "    :param x: 输入数值\n",
+    "    Negates the input value\n",
+    "    :param x: Input value\n",
     "    :return: -x\n",
     "    \"\"\"\n",
     "    return [-x]"
@@ -375,7 +375,7 @@
     "tags": []
    },
    "source": [
-    "## 🗃️ 加载 Titanic 预处理数据"
+    "## 🗃️ Loading Titanic Preprocessed Data"
    ]
   },
   {
@@ -403,7 +403,7 @@
     "def load_titanic_for_adaptoflux(train_processed_path, methods_path=None, collapse_method=CollapseMethod.SUM):\n",
     "    df = pd.read_csv(train_processed_path)\n",
     "    if 'Survived' not in df.columns:\n",
-    "        raise ValueError(\"train_processed.csv 必须包含 'Survived' 列\")\n",
+    "        raise ValueError(\"train_processed.csv must contain 'Survived' column\")\n",
     "    labels = df['Survived'].values\n",
     "    values = df.drop(columns=['Survived']).values\n",
     "    values = np.array(values, dtype=np.float64)\n",
@@ -414,14 +414,14 @@
     "        collapse_method=collapse_method\n",
     "    )\n",
     "\n",
-    "# 加载模型\n",
+    "# Load model\n",
     "model = load_titanic_for_adaptoflux(\n",
     "    train_processed_path='examples/kaggle/titanic/output/train_processed.csv',\n",
     "    methods_path='examples/kaggle/titanic/methods.py',\n",
     "    collapse_method=CollapseMethod.SUM\n",
     ")\n",
     "\n",
-    "print(f\"✅ 加载数据完成：{model.values.shape[0]} 个样本，{model.values.shape[1]} 个特征\")"
+    "print(f\"✅ Data loaded: {model.values.shape[0]} samples, {model.values.shape[1]} features\")"
    ]
   },
   {
@@ -438,7 +438,7 @@
     "tags": []
    },
    "source": [
-    "## 🌱 添加自定义坍缩函数"
+    "## 🌱 Adding Custom Collapse Function"
    ]
   },
   {
@@ -484,7 +484,7 @@
     "tags": []
    },
    "source": [
-    "## 🏗️ 模型训练（逐层生长）"
+    "## 🏗️ Model Training (Layer-by-Layer Growth)"
    ]
   },
   {
@@ -541,7 +541,7 @@
     "tags": []
    },
    "source": [
-    "## 🎨 可视化图结构"
+    "## 🎨 Visualizing Graph Structure"
    ]
   },
   {
@@ -569,27 +569,27 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 读取图\n",
+    "# Read graph\n",
     "G = nx.read_gexf(\"/kaggle/working/AdaptoFlux/models/best/graph.gexf\")\n",
     "\n",
-    "# 指定根节点（请根据你的数据修改 root）\n",
-    "# 如果不知道 root，可以选择一个度最高的节点，或手动指定\n",
-    "root = \"root\"  # 替换为你的实际 root 节点名\n",
+    "# Specify root node (modify 'root' according to your data)\n",
+    "# If root is unknown, pick the highest-degree node or assign manually\n",
+    "root = \"root\"  # Replace with your actual root node name\n",
     "if root not in G:\n",
-    "    # 如果没有明确的 root，可以用一个中心节点（例如度最大的节点）\n",
+    "    # If no explicit root, use the node with maximum degree\n",
     "    root = max(dict(G.degree()), key=lambda x: dict(G.degree())[x])\n",
-    "    print(f\"使用度最大的节点作为根: {root}\")\n",
+    "    print(f\"Using highest-degree node as root: {root}\")\n",
     "\n",
-    "# 使用 BFS 计算每个节点到 root 的距离（层数）\n",
+    "# Use BFS to compute distance (layer) from root to each node\n",
     "try:\n",
-    "    # 对于有向图，可能需要转为无向图来 BFS\n",
+    "    # For directed graphs, convert to undirected for BFS\n",
     "    if G.is_directed():\n",
     "        bfs_dist = nx.shortest_path_length(G.to_undirected(), source=root)\n",
     "    else:\n",
     "        bfs_dist = nx.shortest_path_length(G, source=root)\n",
     "except nx.NetworkXNoPath:\n",
-    "    print(\"图不连通，只考虑包含 root 的连通分量\")\n",
-    "    # 只保留 root 所在的连通分量\n",
+    "    print(\"Graph is disconnected, only considering connected component containing root\")\n",
+    "    # Keep only the connected component containing root\n",
     "    if G.is_directed():\n",
     "        connected_nodes = nx.node_connected_component(G.to_undirected(), root)\n",
     "    else:\n",
@@ -597,20 +597,20 @@
     "    G = G.subgraph(connected_nodes)\n",
     "    bfs_dist = nx.shortest_path_length(G.to_undirected() if G.is_directed() else G, source=root)\n",
     "\n",
-    "# 按距离分层\n",
+    "# Group nodes by distance (layer)\n",
     "layers = {}\n",
     "for node, dist in bfs_dist.items():\n",
     "    layers.setdefault(dist, []).append(node)\n",
     "\n",
-    "# 手动设置布局：x 坐标在每层内均匀分布，y 坐标为层数（距离）\n",
+    "# Manually set layout: x-coordinates evenly spaced within each layer, y = -layer (root on top)\n",
     "pos = {}\n",
     "for layer, nodes in layers.items():\n",
-    "    pos.update({node: (i, -layer) for i, node in enumerate(nodes)})  # y = -layer 保证 root 在顶部\n",
+    "    pos.update({node: (i, -layer) for i, node in enumerate(nodes)})  # y = -layer ensures root is at top\n",
     "\n",
-    "# 设置节点颜色（可选：根据层设置不同颜色）\n",
+    "# Set node colors (optional: color by layer)\n",
     "node_colors = [bfs_dist[node] for node in G.nodes]\n",
     "\n",
-    "# 绘图\n",
+    "# Plot\n",
     "plt.figure(figsize=(12, 8))\n",
     "nx.draw(\n",
     "    G, pos,\n",
@@ -646,7 +646,7 @@
     "tags": []
    },
    "source": [
-    "## 📊 模型评估"
+    "## 📊 Model Evaluation"
    ]
   },
   {
@@ -680,12 +680,12 @@
     "        true_labels = np.array(target).flatten()\n",
     "        return np.mean(pred_classes == true_labels)\n",
     "    except Exception as e:\n",
-    "        print(f\"评估失败: {e}\")\n",
+    "        print(f\"Evaluation failed: {e}\")\n",
     "        return 0.0\n",
     "\n",
     "pred = model.infer_with_graph(model.values)\n",
     "acc = _evaluate_accuracy(pred, model.labels)\n",
-    "print(f\"🎯 最终准确率: {acc:.4f}\")"
+    "print(f\"🎯 Final accuracy: {acc:.4f}\")"
    ]
   },
   {
@@ -702,7 +702,7 @@
     "tags": []
    },
    "source": [
-    "## 📤 生成 Kaggle 提交文件"
+    "## 📤 Generating Kaggle Submission File"
    ]
   },
   {
@@ -732,28 +732,28 @@
     "\n",
     "def load_titanic_for_adaptoflux(train_processed_path, methods_path=None, collapse_method=CollapseMethod.SUM):\n",
     "    \"\"\"\n",
-    "    从预处理后的 Titanic 训练集 CSV 加载数据，并转换为 AdaptoFlux 可用的格式。\n",
+    "    Load data from preprocessed Titanic training CSV into AdaptoFlux-compatible format.\n",
     "\n",
-    "    :param train_processed_path: 预处理后的 train_processed.csv 文件路径\n",
-    "    :param methods_path: 方法路径（传给 AdaptoFlux）\n",
-    "    :param collapse_method: 坍缩方法（传给 AdaptoFlux）\n",
-    "    :return: AdaptoFlux 实例\n",
+    "    :param train_processed_path: Path to preprocessed train_processed.csv\n",
+    "    :param methods_path: Method path (passed to AdaptoFlux)\n",
+    "    :param collapse_method: Collapse method (passed to AdaptoFlux)\n",
+    "    :return: AdaptoFlux instance\n",
     "    \"\"\"\n",
-    "    # 读取 CSV\n",
+    "    # Read CSV\n",
     "    df = pd.read_csv(train_processed_path)\n",
     "\n",
-    "    # 确保存在 Survived 列\n",
+    "    # Ensure 'Survived' column exists\n",
     "    if 'Survived' not in df.columns:\n",
-    "        raise ValueError(\"train_processed.csv 必须包含 'Survived' 列作为标签\")\n",
+    "        raise ValueError(\"train_processed.csv must contain 'Survived' column as label\")\n",
     "\n",
-    "    # 分离标签和特征\n",
-    "    labels = df['Survived'].values  # 一维标签\n",
-    "    values = df.drop(columns=['Survived']).values  # 二维特征矩阵\n",
+    "    # Separate labels and features\n",
+    "    labels = df['Survived'].values  # 1D labels\n",
+    "    values = df.drop(columns=['Survived']).values  # 2D feature matrix\n",
     "\n",
-    "    # 转换为 numpy 浮点类型（防止 int64/float64 混合类型问题）\n",
+    "    # Convert to numpy float64 type (prevent int64/float64 type mismatches)\n",
     "    values = np.array(values, dtype=np.float64)\n",
     "\n",
-    "    # 创建 AdaptoFlux 实例\n",
+    "    # Create AdaptoFlux instance\n",
     "    adaptoflux_instance = AdaptoFlux(\n",
     "        values=values,\n",
     "        labels=labels,\n",
@@ -772,10 +772,10 @@
     "\n",
     "pred = model.infer_with_graph(model.values)\n",
     "\n",
-    "# 生成对应的 PassengerId，从 892 开始\n",
+    "# Generate corresponding PassengerId starting from 892\n",
     "passenger_ids = range(892, 892 + len(pred))\n",
     "\n",
-    "# 构建 DataFrame\n",
+    "# Build DataFrame\n",
     "submission = pd.DataFrame({\n",
     "    'PassengerId': passenger_ids,\n",
     "    'Survived': pred\n",
@@ -783,9 +783,9 @@
     "\n",
     "submission.to_csv('/kaggle/working/submission.csv', index=False)\n",
     "\n",
-    "print(\"✅ 提交文件已生成：/kaggle/working/submission.csv\")\n",
+    "print(\"✅ Submission file generated: /kaggle/working/submission.csv\")\n",
     "\n",
-    "print(\"📁 当前 /kaggle/working 下的文件：\")\n",
+    "print(\"📁 Files in /kaggle/working:\")\n",
     "print(os.listdir(\"/kaggle/working\"))\n",
     "\n",
     "display(submission.head())"
@@ -805,13 +805,13 @@
     "tags": []
    },
    "source": [
-    "## 🙏 致谢\n",
+    "## 🙏 Acknowledgments\n",
     "\n",
-    "感谢 Kaggle 提供 Titanic 数据集。\n",
+    "Thanks to Kaggle for providing the Titanic dataset.\n",
     "\n",
-    "如果你喜欢这个项目，请：\n",
-    "- ⭐ Star 仓库\n",
-    "- 💬 在评论区分享你的想法！"
+    "If you like this project, please:\n",
+    "- ⭐ Star the repository\n",
+    "- 💬 Share your thoughts in the comments!"
    ]
   }
  ],
@@ -840,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.13"
   },
   "papermill": {
    "default_parameters": {},
