添加注册方法功能，还未添加初始化时的使用

--- a/examples/kaggle/titanic/demo.ipynb
+++ b/examples/kaggle/titanic/demo.ipynb
@@ -130,7 +130,7 @@
     "import numpy as np\n",
     "import json\n",
     "import traceback\n",
-    "from ATF.core.flux import AdaptoFlux\n",
+    "from ATF.core.adaptoflux import AdaptoFlux\n",
     "from ATF.CollapseManager.collapse_functions import CollapseMethod\n",
     "from ATF.ModelTrainer.LayerGrowTrainer.layer_grow_trainer import LayerGrowTrainer\n",
     "\n",
