修复一个由于未同步坍缩方法引起的问题，路径生成器类型匹配机制提上日程

--- a/examples/kaggle/titanic/demo.ipynb
+++ b/examples/kaggle/titanic/demo.ipynb
@@ -467,7 +467,7 @@
     "    total = np.sum(values)\n",
     "    return 1 if total > 0 else 0\n",
     "\n",
-    "model.add_collapse_method(collapse_sum_positive)"
+    "model.set_custom_collapse(collapse_sum_positive)"
    ]
   },
   {
@@ -766,7 +766,7 @@
     "model = load_titanic_for_adaptoflux(train_processed_path='examples/kaggle/titanic/output/test_processed.csv',\n",
     "                                    methods_path='examples/kaggle/titanic/methods.py')\n",
     "\n",
-    "model.add_collapse_method(collapse_sum_positive)\n",
+    "model.set_custom_collapse(collapse_sum_positive)\n",
     "\n",
     "model.load_model(folder='models/best')\n",
     "\n",
